log

Wed 13 Mar 2024 08:42:50 PM UTC: 
 exercises.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
048055c
Wed 13 Mar 2024 08:43:29 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
5e78761
Wed 13 Mar 2024 08:49:57 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
5409dbc
Wed 13 Mar 2024 08:59:02 PM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:52:14: error: ‘count’ undeclared (first use in this function)
   52 |   *newSize = count;
      |              ^~~~~
exercises.c:52:14: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:53:3: error: ‘evenArr’ undeclared (first use in this function)
   53 |   evenArr = (int *)malloc(count * sizeof(int));
      |   ^~~~~~~
exercises.c:55:7: error: ‘i’ undeclared (first use in this function)
   55 |   for(i = 0; i < size; i++)
      |       ^
exercises.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
617ae98
Wed 13 Mar 2024 08:59:51 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:52:3: error: ‘evenArr’ undeclared (first use in this function)
   52 |   evenArr = (int *)malloc(count * sizeof(int));
      |   ^~~~~~~
exercises.c:52:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:52:27: error: ‘count’ undeclared (first use in this function)
   52 |   evenArr = (int *)malloc(count * sizeof(int));
      |                           ^~~~~
exercises.c:54:7: error: ‘i’ undeclared (first use in this function)
   54 |   for(i = 0; i < size; i++)
      |       ^
exercises.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e54b444
Wed 13 Mar 2024 09:02:11 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
ce267f4
Wed 13 Mar 2024 09:08:12 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
4ed50a7
Wed 13 Mar 2024 09:08:17 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
4ed50a7
Wed 13 Mar 2024 09:14:27 PM UTC: 
 exercises.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:85:3: error: ‘cont’ undeclared (first use in this function)
   85 |   cont = 0;
      |   ^~~~
exercises.c:85:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:86:3: error: ‘newSize’ undeclared (first use in this function)
   86 |   newSize = size1 + size2;
      |   ^~~~~~~
exercises.c:87:8: error: variable ‘newArr’ set but not used [-Werror=unused-but-set-variable]
   87 |   int *newArr = (int*) malloc(newSize * sizeof(int));
      |        ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
f4cfb61
Wed 13 Mar 2024 09:22:27 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:86:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   86 | {
      | ^
exercises.c:90:3: error: ‘cont’ undeclared (first use in this function)
   90 |   cont = 0;
      |   ^~~~
exercises.c:90:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:91:3: error: ‘newSize’ undeclared (first use in this function)
   91 |   newSize = size1 + size2;
      |   ^~~~~~~
exercises.c:104:9: error: expected expression before ‘int’
  104 |   qsort(int newArr, newSize, sizeof(int), comp);
      |         ^~~
exercises.c:104:3: error: too few arguments to function ‘qsort’
  104 |   qsort(int newArr, newSize, sizeof(int), comp);
      |   ^~~~~
In file included from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:838:13: note: declared here
  838 | extern void qsort (void *__base, size_t __nmemb, size_t __size,
      |             ^~~~~
In file included from test.c:1:
exercises.c:92:8: error: variable ‘newArr’ set but not used [-Werror=unused-but-set-variable]
   92 |   int *newArr = (int*) malloc(newSize * sizeof(int));
      |        ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
9917a3a
Thu 14 Mar 2024 02:24:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:86:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   86 | {
      | ^
exercises.c:90:3: error: ‘cont’ undeclared (first use in this function)
   90 |   cont = 0;
      |   ^~~~
exercises.c:90:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:91:3: error: ‘newSize’ undeclared (first use in this function)
   91 |   newSize = size1 + size2;
      |   ^~~~~~~
exercises.c:104:9: error: expected expression before ‘int’
  104 |   qsort(int newArr, newSize, sizeof(int), comp);
      |         ^~~
exercises.c:104:3: error: too few arguments to function ‘qsort’
  104 |   qsort(int newArr, newSize, sizeof(int), comp);
      |   ^~~~~
In file included from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:838:13: note: declared here
  838 | extern void qsort (void *__base, size_t __nmemb, size_t __size,
      |             ^~~~~
In file included from test.c:1:
exercises.c:92:8: error: variable ‘newArr’ set but not used [-Werror=unused-but-set-variable]
   92 |   int *newArr = (int*) malloc(newSize * sizeof(int));
      |        ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
a9480f1
Thu 14 Mar 2024 02:32:07 PM UTC: 
 exercises.c | 21 +++++++++++++++------
 1 file changed, 15 insertions(+), 6 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:85:3: error: ‘cont’ undeclared (first use in this function)
   85 |   cont = 0;
      |   ^~~~
exercises.c:85:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:86:3: error: ‘newSize’ undeclared (first use in this function)
   86 |   newSize = size1 + size2;
      |   ^~~~~~~
exercises.c:102:7: error: ‘i’ undeclared (first use in this function)
  102 |   for(i = 0; i < newSize; i++)
      |       ^
exercises.c:104:11: error: ‘j’ undeclared (first use in this function); did you mean ‘jn’?
  104 |       for(j = i; j < largo; j++)
      |           ^
      |           jn
exercises.c:104:22: error: ‘largo’ undeclared (first use in this function)
  104 |       for(j = i; j < largo; j++)
      |                      ^~~~~
exercises.c:87:8: error: variable ‘newArr’ set but not used [-Werror=unused-but-set-variable]
   87 |   int *newArr = (int*) malloc(newSize * sizeof(int));
      |        ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
5f0ab36
Thu 14 Mar 2024 02:36:18 PM UTC: 
 exercises.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:85:3: error: ‘cont’ undeclared (first use in this function)
   85 |   cont = 0;
      |   ^~~~
exercises.c:85:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:86:3: error: ‘newSize’ undeclared (first use in this function)
   86 |   newSize = size1 + size2;
      |   ^~~~~~~
exercises.c:100:7: error: ‘i’ undeclared (first use in this function)
  100 |   for(i = 0; i < newArr; i++)
      |       ^
Compilation failed
a1e2037
